--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,204 +1,18 @@
-- title: "HexGen: Generative Inference of Large Language Model over Heterogeneous Environment"
-  authors: Jiang, Youhe; Yan, Ran; Yao, Xiaozhe; Zhou, Yang; Chen, Beidi; Yuan, Binhang; 
-  display: Forty-first International Conference on Machine Learning
-  highlight: 1
-- title: "Zeroth-Order Fine-Tuning of LLMs with Extreme Sparsity"
-  authors: Guo, Wentao; Long, Jikai; Zeng, Yimeng; Liu, Zirui; Yang, Xinyu; Ran, Yide; Gardner, Jacob R; Bastani, Osbert; De Sa, Christopher; Yu, Xiaodong; 
-  display: arXiv preprint arXiv:2406.02913
-  highlight: 1
-- title: "SpecExec: Massively Parallel Speculative Decoding for Interactive LLM Inference on Consumer Devices"
-  authors: Svirschevski, Ruslan; May, Avner; Chen, Zhuoming; Chen, Beidi; Jia, Zhihao; Ryabinin, Max; 
-  display: arXiv preprint arXiv:2406.02532
-  highlight: 1
-- title: "Q-Hitter: A Better Token Oracle for Efficient LLM Inference via Sparse-Quantized KV Cache"
-  authors: Zhang, Zhenyu; Liu, Shiwei; Chen, Runjin; Kailkhura, Bhavya; Chen, Beidi; Wang, Atlas; 
-  display: Proceedings of Machine Learning and Systems
-  highlight: 1
-- title: "Nearest Neighbor Speculative Decoding for LLM Generation and Attribution"
-  authors: Li, Minghan; Chen, Xilun; Holtzman, Ari; Chen, Beidi; Lin, Jimmy; Yih, Wen-tau; Lin, Xi Victoria; 
-  display: arXiv preprint arXiv:2405.19325
-  highlight: 1
-- title: "Layer skip: Enabling early exit inference and self-speculative decoding"
-  authors: Elhoushi, Mostafa; Shrivastava, Akshat; Liskovich, Diana; Hosmer, Basil; Wasti, Bram; Lai, Liangzhen; Mahmoud, Anas; Acun, Bilge; Agarwal, Saurabh; Roman, Ahmed; 
-  display: arXiv preprint arXiv:2404.16710
-  highlight: 1
-- title: "Triforce: Lossless acceleration of long sequence generation with hierarchical speculative decoding"
-  authors: Sun, Hanshi; Chen, Zhuoming; Yang, Xinyu; Tian, Yuandong; Chen, Beidi; 
-  display: arXiv preprint arXiv:2404.11912
-  highlight: 1
-- title: "Megalodon: Efficient llm pretraining and inference with unlimited context length"
-  authors: Ma, Xuezhe; Yang, Xiaomeng; Xiong, Wenhan; Chen, Beidi; Yu, Lili; Zhang, Hao; May, Jonathan; Zettlemoyer, Luke; Levy, Omer; Zhou, Chunting; 
-  display: arXiv preprint arXiv:2404.08801
-  highlight: 1
-- title: "Prompt-prompted Mixture of Experts for Efficient LLM Generation"
-  authors: Dong, Harry; Chen, Beidi; Chi, Yuejie; 
-  display: arXiv preprint arXiv:2404.01365
-  highlight: 1
-- title: "Found in the Middle: How Language Models Use Long Contexts Better via Plug-and-Play Positional Encoding"
-  authors: Zhang, Zhenyu; Chen, Runjin; Liu, Shiwei; Yao, Zhewei; Ruwase, Olatunji; Chen, Beidi; Wu, Xiaoxia; Wang, Zhangyang; 
-  display: arXiv preprint arXiv:2403.04797
-  highlight: 1
-- title: "Sample-efficient Surrogate Model for Frequency Response of Linear PDEs using Self-Attentive Complex Polynomials"
-  authors: Cohen, Andrew; Dou, Weiping; Zhu, Jiang; Koziel, Slawomir; Renner, Peter; Mattsson, Jan-Ove; Yang, Xiaomeng; Chen, Beidi; Stone, Kevin; Tian, Yuandong; 
-  display: arXiv preprint arXiv:2301.02747
-  highlight: 1
-- title: "Galore: Memory-efficient llm training by gradient low-rank projection"
-  authors: Zhao, Jiawei; Zhang, Zhenyu; Chen, Beidi; Wang, Zhangyang; Anandkumar, Anima; Tian, Yuandong; 
-  display: arXiv preprint arXiv:2403.03507
-  highlight: 1
-- title: "LLM Inference Unveiled: Survey and Roofline Model Insights"
-  authors: Yuan, Zhihang; Shang, Yuzhang; Zhou, Yang; Dong, Zhen; Xue, Chenhao; Wu, Bingzhe; Li, Zhikai; Gu, Qingyi; Lee, Yong Jae; Yan, Yan; 
-  display: arXiv preprint arXiv:2402.16363
+- title: "TriForce: Lossless Acceleration of Long Sequence Generation with Hierarchical Speculative Decoding"
+  image: TriForce.png
+  description: With large language models (LLMs) deployed for long content generation, the growing key-value (KV) cache size has become a bottleneck, leading to low computational core utilization and high latency. TriForce, a hierarchical speculative decoding system, addresses this by using dynamic sparse KV cache via retrieval and a smaller model for speculative decoding, achieving up to 2.31× speedup on an A100 GPU and notable efficiency on RTX 4090 GPUs. TriForce also outperforms DeepSpeed-Zero-Inference by 4.86× on a single RTX 4090 GPU, maintaining robust performance across various temperatures.
+  authors: Hanshi Sun, Zhuoming Chen, Xinyu Yang, Yuandong Tian, Beidi Chen
+  link:
+    url: https://arxiv.org/abs/2404.11912
+    blog: https://infini-ai-lab.github.io/TriForce/
+    display: Arxiv
   highlight: 1
 - title: "Sequoia: Scalable, Robust, and Hardware-aware Speculative Decoding"
-  authors: Chen, Zhuoming; May, Avner; Svirschevski, Ruslan; Huang, Yuhsun; Ryabinin, Max; Jia, Zhihao; Chen, Beidi; 
-  display: arXiv preprint arXiv:2402.12374
-  highlight: 1
-- title: "Get More with LESS: Synthesizing Recurrence with KV Cache Compression for Efficient LLM Inference"
-  authors: Dong, Harry; Yang, Xinyu; Zhang, Zhenyu; Wang, Zhangyang; Chi, Yuejie; Chen, Beidi; 
-  display: arXiv preprint arXiv:2402.09398
-  highlight: 1
-- title: "Learn To be Efficient: Build Structured Sparsity in Large Language Models"
-  authors: Zheng, Haizhong; Bai, Xiaoyan; Chen, Beidi; Lai, Fan; Prakash, Atul; 
-  display: arXiv preprint arXiv:2402.06126
-  highlight: 1
-- title: "KIVI: A Tuning-Free Asymmetric 2bit Quantization for KV Cache"
-  authors: Liu, Zirui; Yuan, Jiayi; Jin, Hongye; Zhong, Shaochen; Xu, Zhaozhuo; Braverman, Vladimir; Chen, Beidi; Hu, Xia; 
-  display: arXiv preprint arXiv:2402.02750
-  highlight: 1
-- title: "Hexgen: Generative inference of foundation model over heterogeneous decentralized environment"
-  authors: Jiang, Youhe; Yan, Ran; Yao, Xiaozhe; Chen, Beidi; Yuan, Binhang; 
-  display: arXiv preprint arXiv:2311.11514
-  highlight: 1
-- title: "Laughing hyena distillery: Extracting compact recurrences from convolutions"
-  authors: Massaroli, Stefano; Poli, Michael; Fu, Dan; Kumbong, Hermann; Parnichkun, Rom; Romero, David; Timalsina, Aman; McIntyre, Quinn; Chen, Beidi; Rudra, Atri; 
-  display: Advances in Neural Information Processing Systems
-  highlight: 1
-- title: "Joma: Demystifying multilayer transformers via joint dynamics of mlp and attention"
-  authors: Tian, Yuandong; Wang, Yiping; Zhang, Zhenyu; Chen, Beidi; Du, Simon; 
-  display: arXiv preprint arXiv:2310.00535
-  highlight: 1
-- title: "Efficient streaming language models with attention sinks"
-  authors: Xiao, Guangxuan; Tian, Yuandong; Chen, Beidi; Han, Song; Lewis, Mike; 
-  display: arXiv preprint arXiv:2309.17453
-  highlight: 1
-- title: "Fast Algorithms for a New Relaxation of Optimal Transport"
-  authors: Charikar, Moses; Chen, Beidi; Ré, Christopher; Waingarten, Erik; 
-  display: The Thirty Sixth Annual Conference on Learning Theory
-  highlight: 1
-- title: "Towards Structured Sparsity in Transformers for Efficient Inference"
-  authors: Dong, Harry; Chen, Beidi; Chi, Yuejie; 
-  display: Workshop on Efficient Systems for Foundation Models@ ICML2023
-  highlight: 1
-- title: "CocktailSGD: Fine-tuning foundation models over 500Mbps networks"
-  authors: Wang, Jue; Lu, Yucheng; Yuan, Binhang; Chen, Beidi; Liang, Percy; De Sa, Christopher; Re, Christopher; Zhang, Ce; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "H $ _2 $ O: Heavy-Hitter Oracle for Efficient Generative Inference of Large Language Models"
-  authors: Zhang, Zhenyu; Sheng, Ying; Zhou, Tianyi; Chen, Tianlong; Zheng, Lianmin; Cai, Ruisi; Song, Zhao; Tian, Yuandong; Ré, Christopher; Barrett, Clark; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "Deja vu: Contextual sparsity for efficient llms at inference time"
-  authors: Liu, Zichang; Wang, Jue; Dao, Tri; Zhou, Tianyi; Yuan, Binhang; Song, Zhao; Shrivastava, Anshumali; Zhang, Ce; Tian, Yuandong; Re, Christopher; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "Inrank: Incremental low-rank learning"
-  authors: Zhao, Jiawei; Zhang, Yifei; Chen, Beidi; Schäfer, Florian; Anandkumar, Anima; 
-  display: arXiv preprint arXiv:2306.11250
-  highlight: 1
-- title: "FlexGen: High-Throughput Generative Inference of Large Language Models with a Single GPU"
-  authors: Sheng, Ying; Zheng, Lianmin; Yuan, Binhang; Li, Zhuohan; Ryabinin, Max; Chen, Beidi; Liang, Percy; Re, Christopher; Stoica, Ion; Zhang, Ce; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "Scan and Snap: Understanding Training Dynamics and Token Composition in 1-layer Transformer"
-  authors: Tian, Yuandong; Wang, Yiping; Chen, Beidi; Du, Simon; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "Modeling scattering coefficients using self-attentive complex polynomials with image-based representation, 2022"
-  authors: Cohen, Andrew; Dou, Weiping; Zhu, Jiang; Koziel, Slawomir; Renner, Peter; Mattsson, Jan-Ove; Yang, Xiaomeng; Chen, Beidi; Stone, Kevin; Tian, Yuandong; 
-  display: URL https://arxiv. org/pdf/2301.02747. pdf
-  highlight: 1
-- title: "Compress, then prompt: Improving accuracy-efficiency trade-off of llm inference with transferable prompt"
-  authors: Xu, Zhaozhuo; Liu, Zirui; Chen, Beidi; Tang, Yuxin; Wang, Jue; Zhou, Kaixiong; Hu, Xia; Shrivastava, Anshumali; 
-  display: arXiv preprint arXiv:2305.11186
-  highlight: 1
-- title: "Decentralized training of foundation models in heterogeneous environments"
-  authors: Yuan, Binhang; He, Yongjun; Davis, Jared Quincy; Zhang, Tianyi; Dao, Tri; Chen, Beidi; Liang, Percy; Re, Christopher; Zhang, Ce; 
-  display: Neural Information Processing Systems.
-  highlight: 1
-- title: "Fine-tuning language models over slow networks using activation compression with guarantees"
-  authors: Wang, Jue; Yuan, Binhang; Rimanic, Luka; He, Yongjun; Dao, Tri; Chen, Beidi; Re, Christopher; Zhang, Ce; 
-  display: arXiv preprint arXiv:2206.01299
-  highlight: 1
-- title: "Halos: Hashing large output space for cheap inference"
-  authors: Liu, Zichang; Xu, Zhaozhuo; Ji, Alan; Zhang, Junyan; Li, Jonathan; Chen, Beidi; Shrivastava, Anshumali; 
-  display: Proceedings of Machine Learning and Systems
-  highlight: 1
-- title: "Monarch: Expressive structured matrices for efficient and accurate training"
-  authors: Dao, Tri; Chen, Beidi; Sohoni, Nimit S; Desai, Arjun; Poli, Michael; Grogan, Jessica; Liu, Alexander; Rao, Aniruddh; Rudra, Atri; Ré, Christopher; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "Pixelated butterfly: Simple and efficient sparse training for neural network models"
-  authors: Chen, Beidi; Dao, Tri; Liang, Kaizhao; Yang, Jiaming; Song, Zhao; Rudra, Atri; Re, Christopher; 
-  display: International Conference on Learning Representations
-  highlight: 1
-- title: "Satellite Images and Deep Learning to Identify Discrepancy in Mailing Addresses with Applications to Census 2020 in Houston"
-  authors: Xu, Zhaozhuo; Ji, Alan Baonan; Woods, Andrew; Chen, Beidi; Shrivastava, Anshumali; 
-  display: JSM Proceedings, Statistical Learning and Data Science Section. American Statistical Association.
-  highlight: 1
-- title: "Scatterbrain: Unifying sparse and low-rank attention"
-  authors: Chen, Beidi; Dao, Tri; Winsor, Eric; Song, Zhao; Rudra, Atri; Ré, Christopher; 
-  display: Advances in Neural Information Processing Systems
-  highlight: 1
-- title: "Locality sensitive teaching"
-  authors: Xu, Zhaozhuo; Chen, Beidi; Li, Chaojian; Liu, Weiyang; Song, Le; Lin, Yingyan; Shrivastava, Anshumali; 
-  display: Advances in Neural Information Processing Systems
-  highlight: 1
-- title: "A tale of two efficient and informative negative sampling distributions"
-  authors: Daghaghi, Shabnam; Medini, Tharun; Meisburger, Nicholas; Chen, Beidi; Zhao, Mengnan; Shrivastava, Anshumali; 
-  display: International conference on machine learning
-  highlight: 1
-- title: "MONGOOSE: A learnable LSH framework for efficient neural network training"
-  authors: Chen, Beidi; Liu, Zichang; Peng, Binghui; Xu, Zhaozhuo; Li, Jonathan Lingjie; Dao, Tri; Song, Zhao; Shrivastava, Anshumali; Re, Christopher; 
-  display: International Conference on Learning Representations
-  highlight: 1
-- title: "SOLAR: Sparse Orthogonal Learned and Random Embeddings"
-  authors: Medini, Tharun; Chen, Beidi; Shrivastava, Anshumali; 
-  display: International Conference on Learning Representations
-  highlight: 1
-- title: "Locality Sensitive Sampling for Extreme-Scale Optimization and Deep Learning"
-  authors: Chen, Beidi; 
-  display: nan
-  highlight: 1
-- title: "Fast and accurate stochastic gradient estimation"
-  authors: Chen, Beidi; Xu, Yingchen; Shrivastava, Anshumali; 
-  display: Advances in Neural Information Processing Systems
-  highlight: 1
-- title: "Angular visual hardness"
-  authors: Chen, Beidi; Liu, Weiyang; Yu, Zhiding; Kautz, Jan; Shrivastava, Anshumali; Garg, Animesh; Anandkumar, Animashree; 
-  display: International Conference on Machine Learning
-  highlight: 1
-- title: "SLIDE: In Defense of Smart Algorithms over Hardware Acceleration for Large-scale Deep Learning Systems"
-  authors: Chen, Beidi; Medini, Tharun; Farwell, James; Gobriel, Sameh; Tai, Charlie; Shrivastava, Anshumali; 
-  display: Proceedings of Machine Learning and System
-  highlight: 1
-- title: "Densified winner take all (WTA) hashing for sparse datasets"
-  authors: Chen, Beidi; Shrivastava, Anshumali; 
-  display: Uncertainty in artificial intelligence
-  highlight: 1
-- title: "Sub-linear privacy-preserving near-neighbor search"
-  authors: Riazi, M Sadegh; Chen, Beidi; Shrivastava, Anshumali; Wallach, Dan; Koushanfar, Farinaz; 
-  display: arXiv preprint arXiv:1612.01835
-  highlight: 1
-- title: "Unique entity estimation with application to the Syrian conflict"
-  authors: Chen, Beidi; Shrivastava, Anshumali; Steorts, Rebecca C; 
-  display: The Annals of Applied Statistics
-  highlight: 1
-- title: "BearLoc: a composable distributed framework for indoor localization systems"
-  authors: Chen, Kaifei; He, Siyuan; Chen, Beidi; Kolb, John; Katz, Randy H; Culler, David E; 
-  display: Proceedings of the 2015 Workshop on IoT challenges in Mobile and Industrial Systems
-  highlight: 1
-- title: "Analyzing log analysis: An empirical study of user log mining"
-  authors: Alspaugh, Sara; Chen, Beidi; Lin, Jessica; Ganapathi, Archana; Hearst, Marti; Katz, Randy; 
-  display: 28th Large Installation System Administration Conference (LISA14)
+  image: Sequoia.jpeg
+  description: Sequoia offers a scalable, robust, and hardware-aware solution for speculative decoding. Sequoia uses a dynamic programming algorithm for optimal token tree structures, a novel sampling and verification method for robust performance across temperatures, and a hardware-aware optimizer for maximum efficiency. Evaluations show Sequoia significantly speeds up decoding, improving Llama2-7B, Llama2-13B, and Vicuna-33B performance on an A100 by up to 4.04×, 3.73×, and 2.27×, respectively, and achieving impressive speedups in offloading settings.
+  authors: Zhuoming Chen, Avner May, Ruslan Svirschevski, Yuhsun Huang, Max Ryabinin, Zhihao Jia, Beidi Chen
+  link:
+    url: https://arxiv.org/abs/2402.12374
+    blog: https://infini-ai-lab.github.io/Sequoia-Page/
+    display: Arxiv
   highlight: 1
